# uf2loader

./: .actrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  ACT_QUICKSTART.md  CMakeLists.txt  README.md  config.h  key_event.c  key_event.h  main.c  platformio.ini  run_workflows_locally.sh  test_matrix.md  text_directory_ui.c
.github/workflows/: build.yml
bootloader/: CMakeLists.txt  memmap_2040.ld  memmap_2350.ld
bootloader/boot2/: boot2_custom.S
bootloader/include/: atu.h  bldetect.h  boot_defs.h  config.h  proginfo.h  uf2.h
bootloader/libs/i2ckbd/: i2ckbd.h
bootloader/libs/lcdspi/: lcdspi.c
bootloader/src/: bldetect.c  ff_minimal_unicode.c  main.c  proginfo.c  text_directory_ui.c  uf2.c
build_docker_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_docker_test/bootloader/libs/i2ckbd/: Makefile  cmake_install.cmake
build_docker_test/bootloader/libs/lcdspi/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/docs/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_stdlib_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_sync/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_time/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/common/pico_util/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2350/boot_stage2/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2350/hardware_regs/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2350/hardware_structs/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2350/pico_platform/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/boot_bootrom_headers/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/cmsis/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_adc/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_base/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_boot_lock/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_clocks/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_dcp/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_divider/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_dma/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/hardware_exception/: Makefile  cmake_install.cmake
build_docker_test/pico-sdk/src/rp2_common/pico_atomic/: Makefile  (+1 more)
build_docker_test/pico-sdk/tools/: Makefile  cmake_install.cmake
common/bootloader/: CMakeLists.txt  proginfo.c  proginfo.h
common/i2ckbd/: debug.h  i2ckbd.c
common/lcdspi/: CMakeLists.txt  lcdspi.h
common/petit_fatfs/: diskio.c
diag/: CMakeLists.txt  diag.c
docker/: Dockerfile
docs/: ACT_AUTHENTICATION.md  BOOTLOADER_SAFETY_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  README_TESTS.md  README_project_structure.md  RENODE_TESTING.md  RUNNING_CI_LOCALLY.md  TESTING_INFRASTRUCTURE.md
i2ckbd/: i2ckbd.c
lcdspi/: lcdspi.c  lcdspi.h
prebuild_output/: picocalc_sd_boot_pico.uf2  picocalc_sd_boot_pico2_w.uf2
prebuild_output/pico/: picocalc_sd_boot_pico.elf  picocalc_sd_boot_pico.uf2
sd_card_content/: README.md
src/: CMakeLists.txt  Makefile.test  README_TESTS.md  bldetect.c  config.h  key_event.c  key_event.h  main.c  memmap_2040.ld  proginfo.c  run_all_tests.sh  test_critical_scenarios.c  test_integration.sh  test_safety_gaps  test_shared.c  test_uf2  test_uf2.c  testuf2.h  text_directory_ui.c  text_directory_ui.h  uf2.c  uf2_test.c
src/boot2/: boot2_custom.S
src/i2ckbd/: CMakeLists.txt
stage3/: .clang-format  .clangd  CMakeLists.txt  boot2_custom.S  memmap_2040.ld  memmap_2350.ld  partitions.json  partitions.json.in  stage3.c  uf2.c
stage3/lib/petit_fatfs/: CMakeLists.txt  diskio.c  diskio.h  pff.c  pffconf.h  sdcard.c  sdcard.h
tests/: CMakeLists_standalone.txt  bootloader.robot  generate_test_files.py  renode_flash_test.py  renode_test.py  rp2040.resc  run_renode_tests.py  simple_renode_test.py  simple_test.resc  test_common.c  test_common.h  test_critical_scenarios.c  test_hardware.py  test_safety_gaps.c  test_shared.c  test_uf2.c  testuf2.c  testuf2.h  uf2_test.c  uf2_test_utils.c  uf2_test_utils.h
tools/: check_uf2_crc32.py  generate_test_uf2.py  run_all_tests_locally.sh  run_ci_locally_docker.sh  run_renode_tests_docker.sh  run_renode_tests_native.sh  run_tests_cmake.sh  test_corrupted_uf2_flow.py
ui/: .clang-format  CMakeLists.txt  config.h  key_event.c  main.c  partitions.json  text_directory_ui.c  text_directory_ui.h  uf2.c  uf2.h  ui.h
ui/fatfs/: ffconf.h
ui/lib/binary_info_reader/: CMakeLists.txt  bi_reader.c
ui/lib/fatfs/: CMakeLists.txt  diskio.c  ffconf.h  sdmmc.c  sdmmc.h
ui/lib/lcdspi/: lcdspi.c
ui/lib/sdmmc/: CMakeLists.txt  sdmmc.c  sdmmc.h
ui/lib/usb_msc/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_msc.c  usb_msc.h
(+138 files in other folders)
